# ExploTech

./: ExploTech.sln  ExploTech.vcxproj  ExploTech.vcxproj.filters  build.sh  windowsBuild.sh
Battlecraft/: Battlecraft.vcxproj  Battlecraft.vcxproj.filters
Battlecraft/Data/Shaders/: Simple_Vertex.glsl
Battlecraft/src/: Application.h  Display.h
Battlecraft/src/Shaders/: Shader_Loader.cpp  Shader_Loader.h  Shader_Program.cpp  Shader_Program.h  Simple_Shader.cpp  (+1 more)
Data/Shaders/: HUD_Fragment.glsl  Simple_Vertex.glsl  Text_Fragment.glsl  Text_Vertex.glsl
ExploTech/: ExploTech.vcxproj  ExploTech.vcxproj.filters  linesOfCode.bat
ExploTech/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Display.cpp  Display.h  Entity.h  Glm_Common.h  Model.cpp  Model.h  main.cpp
src/: Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Display.h  Entity.h
src/HUD/: Crosshair.h
src/Input/: Input_Manager.cpp
src/Math/: Matrix.cpp  Matrix.h
src/Renderer/: Chunk_Renderer.h  Master_Renderer.cpp  TextRenderer.cpp
src/Shaders/: HUD_Shader.cpp  HUD_Shader.h  HUD_ShaderSimple.cpp  Shader_Loader.cpp  Shader_Loader.h  Simple_Shader.h
src/States/: Game_State.h
src/Text/: Sentence.cpp  Sentence.h  Text_Manager.cpp  Text_Manager.h
src/Texture/: Texture.cpp  TextureArray2D.cpp
src/Util/: PointerVector.h
src/World/Block/: Block_ID.h
src/World/Block/BlockTypes/: Air.h  Grass.h
src/World/Block/BlockTypes/Data/: BlockData.cpp  BlockData.h
src/World/Chunk/: Chunk.cpp  Mesh.h  WorldManager.cpp  WorldManager.h
src/World/Generation/: WorldGeneration.cpp
(+113 files in other folders)
